--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ nav{
     background: #fff;
     z-index: 1000;
     width: 100%;
-    padding: 15px;
+    padding: 20px;
     display: none;
     -webkit-box-shadow: 0px 2px 92px 0px rgba(0, 0, 0, 0.18);
     -moz-box-shadow: 0px 2px 92px 0px rgba(0, 0, 0, 0.18);
@@ -310,9 +310,18 @@ input:-webkit-autofill {
 
 .social a{
     color: #fff;
-    font-size: 15px;
+    font-size: 17px;
     margin:0 15px;
     transition: all ease 0.3s;
+}
+.social a i {
+    font-size: 17px;
+}
+.social-icons a i{
+    font-size: 17px;
+}
+.social-icons a {
+    margin: 0 5px;
 }
 
 .social a:hover{
@@ -583,7 +592,7 @@ input:-webkit-autofill {
 }
 
 .about.type-1 .about-image img{
-    width: 100%;
+    width: 95%;
     box-shadow: 0px 0px 85px 0px rgba(0, 0, 0, 0.14);
     margin-top: -15%;
     margin-left: calc(15% - 15px);
@@ -611,7 +620,7 @@ input:-webkit-autofill {
 }
 
 .about{
-    padding-top:90px;
+    padding-top:60px;
  }   
 
 .diag .about{
