--- a/css/style.css
+++ b/css/style.css
@@ -629,8 +629,8 @@ input:-webkit-autofill {
 
 .about-image img{
     width: 100%;
+    filter: grayscale(40%);
  }   
-
 
 .work-areas{
     width: 100%;
@@ -747,6 +747,12 @@ input:-webkit-autofill {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
+}
+.skills-header{
+    position: absolute;
+    bottom: 47%;
+    right: 25%;
+    font-weight: bold;
 }
 
 
@@ -1105,6 +1111,11 @@ a.site-button{
     .about.type-1 .about-image img{
         margin: 0;
     }
+    .skills-header{
+        bottom: 23%;
+        text-align: center;
+        right: 19%;
+    }
     
 }
 
@@ -1113,7 +1124,11 @@ a.site-button{
 
 @media screen and (max-width: 767px) {
 
-
+    .skills-header{
+        bottom: 24%;
+        text-align: center;
+        right: 19%;
+    }
     
     .home-content h1{
         font-size: 32px;
@@ -1200,7 +1215,40 @@ a.site-button{
     }
     
 }
+.live-desktop,
+.github-desktop{
+    position: absolute;
+    top: 95px;
+    transition-duration: .5s;
+    text-shadow: 0px 0px 7px white;
+    color: black;
+    opacity: 0;
+    cursor: pointer;
+}
+.blog-image:hover .live-desktop,
+.blog-image:hover .github-desktop{
+    position: absolute;
+    top: 95px;
+    opacity: 1;
+    transition-duration: .5s;
+    text-shadow: 0px 0px 7px white;
+    color: black;
+    cursor: pointer;
+}
 
+.live-desktop{
+    left: 25%
+}
+.github-desktop{
+    right: 29%;
+}
+.blog-image:hover .folio-img{
+    filter: blur(2px);
+    transition-duration: .5s;
+}
+.folio-img{
+    transition-duration: .5s;
+}
 
 /*min Width 768px */
 @media screen and (min-width: 768px) {
@@ -1209,7 +1257,12 @@ a.site-button{
         display: block!important;
     }
     
+    .live-mobile,
+    .github-mobile{
+        display: none;
+    }   
 }
+
 
 
 /*------------------------ 7 Slider & Video Home ------------------------*/
