--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,14 @@ input:-webkit-autofill {
 
 /*------------------------ 2 Home ------------------------*/		
 
+.dot-shadow{
+    
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    text-shadow: rgba(255,255,255,0.5) 0px 3px 3px;
+    }    
 .home{
     background:url(../images/home.jpg) bottom center;
     width: 100%;
@@ -1218,22 +1226,24 @@ a.site-button{
 .live-desktop,
 .github-desktop{
     position: absolute;
-    top: 95px;
+    top: -30px;
     transition-duration: .5s;
     text-shadow: 0px 0px 7px white;
     color: black;
     opacity: 0;
     cursor: pointer;
+    height: 0px;
 }
 .blog-image:hover .live-desktop,
 .blog-image:hover .github-desktop{
     position: absolute;
-    top: 95px;
+    top: 5px;
     opacity: 1;
     transition-duration: .5s;
     text-shadow: 0px 0px 7px white;
     color: black;
     cursor: pointer;
+    height: 16px;
 }
 
 .live-desktop{
@@ -1247,6 +1257,24 @@ a.site-button{
     transition-duration: .5s;
 }
 .folio-img{
+    transition-duration: .5s;
+}
+.hover-cont{
+    background-color: #f5f5f5;
+    height: 0px;
+    width: 100%;
+    position: absolute;
+    top: 212px;
+    left: 9px;
+    transition-duration: .5s;
+}
+.blog-image:hover .hover-cont {
+    background-color: #f5f5f5;
+    height: 32px;
+    width: 100%;
+    position: absolute;
+    top: 180px;
+    left: 9px;
     transition-duration: .5s;
 }
 
