--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ input:-webkit-autofill {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.4);
     z-index: 1;
 }
 
@@ -477,7 +477,8 @@ input:-webkit-autofill {
     position: relative;
 }
 
-.diag .contact .contact-info li{
+.diag .contact .contact-info li,
+.diag .contact .contact-info li a{
     line-height: 36px;
     font-size: 14.5px;
     color: #414141;
@@ -573,14 +574,14 @@ input:-webkit-autofill {
 }
 
 .sitebtn:hover{
-    background: #000;
-    color: #fff;
+    
+    color: #000;
     border-color: #000;
     transition: all ease 0.3s;
 }
 
 .sitebtn:hover:after{
-    color: #fff;
+    color: #000;
 }
 
 .sitebtn:focus{
@@ -720,7 +721,8 @@ input:-webkit-autofill {
 }
 
 .dgray-bg{
-    background: #f5f5f5; 
+    background: #f5f5f5;
+    box-shadow: 0px 3px 30px 0px rgba(0, 0, 0, 0.6); 
 }
 
 .what-can{
@@ -762,6 +764,7 @@ input:-webkit-autofill {
     right: 12%;
     font-weight: bold;
 }
+
 
 
 
@@ -1008,7 +1011,7 @@ ul.post-comment li p {
     text-align: center;
     background: white;
     padding: 12px;
-    box-shadow: 1px 1px 7px #efefef;
+    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.6)
 }
 
 .contact-info i{
@@ -1034,6 +1037,12 @@ ul.post-comment li p {
 .section-title p{
     margin-top:20px;
 }
+.contact .fa {
+    padding: 4px;
+    border-radius: 50px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
+    background: rgba(255,255,255,.8);
+}
 
 .form-inp {
     width: 100%;
@@ -1045,10 +1054,11 @@ ul.post-comment li p {
     padding-left: 10px;
     margin-bottom: 15px;
     font-family: 'Poppins', sans-serif;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
 }
 
 .contact-form textarea {
-       width: 100%;
+    width: 100%;
     border: 0;
     border-bottom: solid 1px #dfdfdf;
     font-size: 13px;
@@ -1056,6 +1066,7 @@ ul.post-comment li p {
     height: 119px;
     margin-bottom: 15px;
     font-family: 'Poppins', sans-serif;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
 }
 
 .contact-form{
@@ -1066,7 +1077,9 @@ ul.post-comment li p {
     margin: auto;
     margin-top: 30px;
     display: block;
-    font-weight: 600;
+    background: #f5f5f5;
+    text-shadow: 0px 0px 4px white;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
 }
 
 .button{
@@ -1122,6 +1135,7 @@ a.site-button{
     
     .about.type-1 .about-image{
         background: none;
+        margin-top: 0px;
     }
     
     .about.type-1 .about-image img{
@@ -1197,7 +1211,14 @@ a.site-button{
     .about h2 {
         margin-top: 30px;
     }
-    
+    .about.type-1 .about-image img{
+        width: 70%;
+        left: 15%;
+        position: relative;
+    }
+    .about.type-1 .about-image{
+        padding-bottom: 0px;
+    }
     .gray-bg {
         margin-top: 30px;
     }
@@ -1288,6 +1309,7 @@ a.site-button{
 
 /*min Width 768px */
 @media screen and (min-width: 768px) {
+    
     
  .nav-menu{
         display: block!important;
