--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ input:-webkit-autofill {
    font-family: 'Poppins', sans-serif;
    margin-bottom: 20px;
    background-image: url('../images/ocean-crop.gif');
-   background-size: cover;
+   background-size: 39% 126%;
     color: rgba(255,255,255,.2);
 	-moz-background-clip: text;
     -webkit-background-clip: text;
